--- a/Tutkielma/content/pohdinta.tex
+++ b/Tutkielma/content/pohdinta.tex
@@ -92,7 +92,7 @@ Toisaalta myös erilliset ympyrät ovat myös melko rajoittunut malli monimutkai
 Tällaisten vaikeuksien vuoksi konenäön alalla muotojen mallintamisessa  tässä tutkielmassa käytetyn kaltaisten geometristen mallia sijasta suositumpia ovat erilaisiin merkitseviin pisteisiin perustuvat mallit (esimerkiksi \emph{active contour model, snakes} \cite{prince2012}).
 
 Yhteenvetona, yleisesti reaalimaailman dekonvoluutiosovelluksia ajatellen tässä tutkielmassa käsitelty ongelma on rajoittunut.
-Usein tutkittavan kuvan rakenteesta ei voida tehdä näin yleisiä ja joudutaan käyttämään paljon yleisempiä malleja.
+Usein tutkittavan kuvan rakenteesta ei voida tehdä samanlaisia oletuksia kuten tässä tutkielmassa, ja joudutaan käyttämään paljon yleisempiä malleja.
 Mutta ''oikeiden'' konenäön ongelmien ratkaisemiseen käytetään yleisellä tasolla hyvin samankaltaisia metodeja:
 Sumennosta kuitenkin mallinnetaan konvoluutio-operaationa,
 ja ratkaisun lähtökohtana on usein muodostetaan jokin sopiva energiafunktio, jota optimoidaan.
